refatorando meu projeto para aplicar banco de dados